// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`External links <BaseLink /> should render simple links 1`] = `
<Connect(Link)
  href="http://www.example.com/some_id"
  rel="noopener noreferrer"
  target="_blank"
>
  <div>
    link
  </div>
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 2`] = `
<Connect(Link)
  href="http://www.example.com/some_id"
  rel="noopener noreferrer"
  target="_blank"
>
  <div>
    div
    <span>
      span
    </span>
  </div>
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 3`] = `
<Connect(Link)
  href="http://www.example.com/some_id"
  rel="noopener noreferrer"
  target="_blank"
>
  link
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 4`] = `
<Connect(Link)
  href="https://example.com/999/something"
  rel="noopener noreferrer"
  target="_blank"
>
  <div>
    link
  </div>
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 5`] = `
<Connect(Link)
  href="https://example.com/999/something"
  rel="noopener noreferrer"
  target="_blank"
>
  <div>
    div
    <span>
      span
    </span>
  </div>
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 6`] = `
<Connect(Link)
  href="https://example.com/999/something"
  rel="noopener noreferrer"
  target="_blank"
>
  link
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 7`] = `
<Connect(Link)
  href="example.com/id:Identification"
  rel="noopener noreferrer"
  target="_blank"
>
  <div>
    link
  </div>
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 8`] = `
<Connect(Link)
  href="example.com/id:Identification"
  rel="noopener noreferrer"
  target="_blank"
>
  <div>
    div
    <span>
      span
    </span>
  </div>
</Connect(Link)>
`;

exports[`External links <BaseLink /> should render simple links 9`] = `
<Connect(Link)
  href="example.com/id:Identification"
  rel="noopener noreferrer"
  target="_blank"
>
  link
</Connect(Link)>
`;

exports[`External links <DOILink /> should render simple links 1`] = `
<BaseLink
  id="1.2.a.b"
  pattern="{id}"
  target="_blank"
>
  1.2.a.b
</BaseLink>
`;

exports[`External links <GoLink /> should render simple links 1`] = `
<BaseLink
  id="GO:0003676"
  pattern="https://www.ebi.ac.uk/QuickGO/GTerm?id={id}"
  target="_blank"
>
  GO:0003676
</BaseLink>
`;

exports[`External links <GoLink /> should render simple links 2`] = `
<BaseLink
  id="GO:0003676"
  pattern="https://www.ebi.ac.uk/QuickGO/GTerm?id={id}"
  target="_blank"
>
  GO:0003676
</BaseLink>
`;

exports[`External links <PDBeLink /> should render simple links 1`] = `
<BaseLink
  id="101m"
  pattern="https://www.ebi.ac.uk/pdbe/entry/pdb/{id}"
  target="_blank"
>
  101m
</BaseLink>
`;

exports[`External links <PMCLink /> should render simple links 1`] = `
<BaseLink
  id="12345"
  pattern="https://europepmc.org/abstract/MED/{id}"
  target="_blank"
>
  PUB12345
</BaseLink>
`;

exports[`External links <UniProtLink /> should render simple links 1`] = `
<BaseLink
  id="A0A023GPI8"
  pattern="http://www.uniprot.org/uniprot/{id}"
  target="_blank"
>
  A0A023GPI8
</BaseLink>
`;
